--- a/pom.xml
+++ b/pom.xml
@@ -5,37 +5,25 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.yona</groupId>
 	<artifactId>web</artifactId>
-<<<<<<< HEAD
 	<name>blog</name>
-=======
-	<name>y0na</name>
->>>>>>> 72db12440e0aa55882bb491d30c2f3ea5d3be1bf
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
 		<java-version>1.8</java-version>
-<<<<<<< HEAD
 		<org.springframework-version>5.0.5.RELEASE</org.springframework-version>
 		<org.aspectj-version>1.8.9</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
         <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
 	</properties>
-	<dependencies>
+  	<dipendencies>
 	<!-- 
 		<dependency>
     		<groupId>org.apache.maven.plugins</groupId>
     		<artifactId>maven-resources-plugin</artifactId>
     		<version>2.6</version>
 		</dependency> -->
-		
-=======
-		<org.springframework-version>4.3.8.RELEASE</org.springframework-version>
-		<org.aspectj-version>1.8.9</org.aspectj-version>
-		<org.slf4j-version>1.6.6</org.slf4j-version>
-	</properties>
-	<dependencies>
->>>>>>> 72db12440e0aa55882bb491d30c2f3ea5d3be1bf
+
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -100,9 +88,7 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
-<<<<<<< HEAD
-=======
+
 		<!--  log4j-->
 		
 		<!-- <dependency>
@@ -129,7 +115,6 @@
 			<scope>runtime</scope>
 		</dependency> -->
 
->>>>>>> 72db12440e0aa55882bb491d30c2f3ea5d3be1bf
 		<!-- @Inject -->
 		<dependency>
 			<groupId>javax.inject</groupId>
@@ -175,10 +160,6 @@
 			<artifactId>mybatis</artifactId>
 		</dependency>
 
-<<<<<<< HEAD
-=======
-
->>>>>>> 72db12440e0aa55882bb491d30c2f3ea5d3be1bf
 		<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-spring -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
@@ -245,8 +226,7 @@
 					<mainClass>org.test.int1.Main</mainClass>
 				</configuration>
 			</plugin>
-<<<<<<< HEAD
-			
+	
 			<!-- 메이븐을 통한 서버 배포 -->    
 		    <plugin>
 		        <groupId>org.apache.maven.plugins</groupId>
@@ -279,9 +259,6 @@
         			<testFailureIgnore>true</testFailureIgnore>
     			</configuration>
 			</plugin>
-			
-=======
->>>>>>> 72db12440e0aa55882bb491d30c2f3ea5d3be1bf
 		</plugins>
 	</build>
 	<dependencyManagement>
@@ -352,20 +329,12 @@
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-api</artifactId>
-<<<<<<< HEAD
 				<version>2.13.0</version>
-=======
-				<version>2.13.2</version>
->>>>>>> 72db12440e0aa55882bb491d30c2f3ea5d3be1bf
 			</dependency>
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-core</artifactId>
-<<<<<<< HEAD
 				<version>2.13.0</version>
-=======
-				<version>2.13.2</version>
->>>>>>> 72db12440e0aa55882bb491d30c2f3ea5d3be1bf
 			</dependency>
 			
 			<dependency>
@@ -421,11 +390,7 @@
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
-<<<<<<< HEAD
 				<version>2.9.7</version>
-=======
-				<version>2.9.10.5</version>
->>>>>>> 72db12440e0aa55882bb491d30c2f3ea5d3be1bf
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
