--- a/pom.xml
+++ b/pom.xml
@@ -17,17 +17,14 @@
         <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
         <security.version>5.3.3.RELEASE</security.version>			<!--  Spring Security-->
 	</properties>
-  	<dipendencies>
+  	<dependencies>
 	<!-- 
 		<dependency>
     		<groupId>org.apache.maven.plugins</groupId>
     		<artifactId>maven-resources-plugin</artifactId>
     		<version>2.6</version>
 		</dependency> -->
-<<<<<<< HEAD
-=======
 
->>>>>>> 40a7a4345c1f830777594d2f6a4c072d029d57d9
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -92,11 +89,6 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-<<<<<<< HEAD
-		
-=======
-
->>>>>>> 40a7a4345c1f830777594d2f6a4c072d029d57d9
 		<!--  log4j-->
 		
 		<!-- <dependency>
@@ -122,11 +114,6 @@
 			</exclusions>
 			<scope>runtime</scope>
 		</dependency> -->
-<<<<<<< HEAD
-		
-=======
-
->>>>>>> 40a7a4345c1f830777594d2f6a4c072d029d57d9
 		<!-- @Inject -->
 		<dependency>
 			<groupId>javax.inject</groupId>
@@ -228,8 +215,8 @@
 			<artifactId>spring-security-test</artifactId> 
 			<version>${security.version}</version> 
 		</dependency>
-		
 	</dependencies>
+	
 	<build>
 		<plugins>
 			<plugin>
@@ -266,11 +253,7 @@
 					<mainClass>org.test.int1.Main</mainClass>
 				</configuration>
 			</plugin>
-<<<<<<< HEAD
-			
-=======
-	
->>>>>>> 40a7a4345c1f830777594d2f6a4c072d029d57d9
+
 			<!-- 메이븐을 통한 서버 배포 -->    
 		    <plugin>
 		        <groupId>org.apache.maven.plugins</groupId>
@@ -381,12 +364,7 @@
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-core</artifactId>
 				<version>2.13.0</version>
-<<<<<<< HEAD
 			</dependency>			
-=======
-			</dependency>
-			
->>>>>>> 40a7a4345c1f830777594d2f6a4c072d029d57d9
 			<dependency>
 				<groupId>javax.inject</groupId>
 				<artifactId>javax.inject</artifactId>
@@ -441,11 +419,7 @@
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
 				<version>2.9.7</version>
-<<<<<<< HEAD
-				</dependency>
-=======
 			</dependency>
->>>>>>> 40a7a4345c1f830777594d2f6a4c072d029d57d9
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-context-support</artifactId>
