--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,12 @@
 	<properties>
 		<java-version>1.8</java-version>
 		<org.springframework-version>5.0.5.RELEASE</org.springframework-version>
-		<org.aspectj-version>1.8.9</org.aspectj-version>
+		<spring.security.version>5.3.3.RELEASE</spring.security.version>
+		<org.aspectj-version>1.8.4</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
         <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
-        <security.version>5.3.3.RELEASE</security.version>			<!--  Spring Security-->
-	</properties>
+   	</properties>
   	<dependencies>
 	<!-- 
 		<dependency>
@@ -193,27 +193,27 @@
 		<dependency> 
 			<groupId>org.springframework.security</groupId> 
 			<artifactId>spring-security-core</artifactId> 
-			<version>${security.version}</version> 
+			<version>${spring.security.version}</version> 
 		</dependency> 
 		<dependency> 
 			<groupId>org.springframework.security</groupId> 
 			<artifactId>spring-security-web</artifactId> 
-			<version>${security.version}</version> 
+			<version>${spring.security.version}</version> 
 		</dependency> 
 		<dependency> 
 			<groupId>org.springframework.security</groupId> 
 			<artifactId>spring-security-config</artifactId> 
-			<version>${security.version}</version> 
+			<version>${spring.security.version}</version> 
 		</dependency> 
 		<dependency> 
 			<groupId>org.springframework.security</groupId> 
 			<artifactId>spring-security-taglibs</artifactId> 
-			<version>${security.version}</version> 
+			<version>${spring.security.version}</version> 
 		</dependency> 
 		<dependency> 
 			<groupId>org.springframework.security</groupId> 
 			<artifactId>spring-security-test</artifactId> 
-			<version>${security.version}</version> 
+			<version>${spring.security.version}</version> 
 		</dependency>
 	</dependencies>
 	<build>
@@ -264,25 +264,25 @@
 		        </configuration>
 		    </plugin>
 		 
-		 
-		    <!-- Setting tomcat manager  
+		    <!-- 톰캣에 프로젝트 등록 -->  
 		    <plugin>
 		        <groupId>org.codehaus.mojo</groupId>
 		        <artifactId>tomcat-maven-plugin</artifactId>
 		        <version>1.1</version>
 		        <configuration>
-		            <url>http://ec2 ip:8080/manager/text</url>
-		            <path>/y0na</path>
+		            <url>http://13.125.72.105:8080/manager/text</url>
+		            <server>TomcatServer</server>
+		            <path>/blog</path>
 		            <username>admin</username>
 		            <password>admin</password>
 		        </configuration>
-		    </plugin> -->
+		    </plugin>
 		    
 		    <!--  unit test를 위해 사용된다.-->
 		    <plugin>
     			<groupId>org.apache.maven.plugins</groupId>
     			<artifactId>maven-surefire-plugin</artifactId>
-			    <version>2.19.1</version>
+			    <version>2.12.4</version>
 			    <configuration>
         			<testFailureIgnore>true</testFailureIgnore>
     			</configuration>
