--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,7 +21,7 @@
     	<listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
   	</listener>
 	
-	<!--  한글 꺠지지 않도록 처리-->
+	<!--  파일 업로드 시 한글이 꺠지지 않도록 설정-->
 	<filter>
 		<filter-name>encoding</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
